# GridDyn

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE
.ci/: azure-build.yml  azure-pipelines.yml  azure-test.yml
.circleci/: config.yml
.github/actions/: run-clang-tidy-pr.sh
.github/workflows/: braid-build.yml  ci-tests.yml  compiler-tests.yml  formatting.yml  (+1 more)
config/: griddyn-config.h.in  spelling_whitelist.txt
config/cmake/installer/: CMakeLists.txt  README.md
docs/: branch-retirement-audit.md  building.md  conf.py  gtest-migration-plan.md  index.md  installation.md  overview.md  requirements.txt  simple_help.txt  state_estimation.tex  status.md
examples/: 179busDynamicTest.xml  two_bus_dynamic_example.xml
interfaces/: griddyn.py  swig_compile.sh  test.py
python/: fileReaders.py  gridDynViewer.py  testViewer.py  tk_test2.py
scripts/: asan-cache.cmake  build_boost_clang.sh  build_boost_gcc.sh  clang-tidy-reader.py  clang_format.sh  clang_tidy.sh  cleanup-cmake.sh  install-ci-dependencies.sh  install-dependency.sh  lcov-helper.sh  msan-cache.cmake  parser.py  run-ci-tests.sh  run-circleci-tests.sh  tsan-cache.cmake  ubsan-cache.cmake  xbraid_build.sh
src/: CMakeLists.txt
src/formatInterpreters/: CMakeLists.txt  XmlReaderElement.cpp  XmlReaderElement.h  iniReaderElement.cpp  iniReaderElement.h  jsonElement.cpp  jsonElement.h  jsonReaderElement.cpp  jsonReaderElement.h  pugixmlReaderElement.cpp  pugixmlReaderElement.h  readerElement.cpp  readerElement.h  tinyxml2ReaderElement.cpp  tinyxml2ReaderElement.h  tinyxmlReaderElement.cpp  tinyxmlReaderElement.h  tomlElement.cpp  tomlElement.h  tomlReaderElement.cpp  tomlReaderElement.h  yamlElement.cpp  yamlElement.h  yamlReaderElement.cpp  yamlReaderElement.h
test/: .clang-tidy  CMakeLists.txt  exeTestHelper.cpp  exeTestHelper.h  gtestHelper.h  gtestHelperFunctions.cpp
test/componentTests/: ConditionTests.cpp  simulationTests.cpp  testAdjustableTX.cpp  testArea.cpp  testBlocks.cpp  testComponents.cpp  testEvents.cpp  testExciters.cpp  testExtraModels.cpp  testFMI.cpp  testGenModels.cpp  testGenerators.cpp  testGovernors.cpp  testGridLab.cpp  testLinks.cpp  testLoads.cpp  testRecorders.cpp  testRelays.cpp  testSource.cpp  testdcLinks.cpp
test/extraTests/: extraFMUtests.cpp  largeContingencyTests.cpp  largeInputTests.cpp  objectSizeReport.cpp  performanceTests.cpp  testExtra.cpp
test/libraryTests/: gtestLibrarySmokeTests.cpp  libraryTests.cpp  testCore.cpp  testElementReaders.cpp  testGridDynRunner.cpp  testGridParameter.cpp  testJsonReader.cpp  testMatrixData.cpp  testOperatingBounds.cpp  testReaderInfo.cpp  testValuePredictors.cpp  testWorkQueue.cpp  testXML.cpp  testZipUtilities.cpp
test/systemTests/: faultTests.cpp  testCloning.cpp  testConstraints.cpp  testContingency.cpp  testDyn1.cpp  testDyn2.cpp  testGridDynRunner.cpp  testInputs.cpp  testMainExe.cpp  testOutputs.cpp  testRoots.cpp  testSolverModes.cpp  testSystem.cpp  testpFlow.cpp  validationTests.cpp
test/testSharedLibrary/: CMakeLists.txt  basic_tests.cpp  shared_library_tests.cpp
test/test_files/IEEE_test_cases/: ieee39event.xml
test/test_files/block_tests/: block_test_compare.xml  block_tests_deadband.xml
test/test_files/clone_tests/: two_bus_dynamic_example.xml
test/test_files/dcLink_tests/: test_hvdc2.xml
test/test_files/dyn_tests2/: test_pulseLoadChange1.xml  test_pulseLoadChange1_partitioned.xml  test_pulseLoadChange2.xml  test_randLoadChange.xml  test_sineLoad_partitioned1.xml  test_sineLoad_partitioned2.xml  test_sineLoad_partitioned3.xml  test_sineLoad_simultaneous.xml
test/test_files/extraModel_tests/: test_thermaltx_txage.xml
test/test_files/fault_tests/: geco_fault_uncoupled.xml  link_fault2.xml  link_fault_breaker.xml  link_fault_breaker2.xml  link_fault_breaker3.xml  link_fault_breaker4.xml  link_fault_fuse.xml  link_fault_fuse2.xml  link_fault_fuse3.xml
test/test_files/fmi_tests/: approxLoad_testfmi.xml  block_grid.xml  fmiload_test2.xml  fmiload_test3.xml  fmimotorload_test1.xml
test/test_files/gridlabD_tests/: IEEE_13_mod_dynamic.xml  IEEE_13_mod_triple-sparse.xml  IEEE_13_mod_triple.xml  Simple_3Bus_mod.glm  Simple_3Bus_mod3x_impedance.xml  Simple_3Bus_mod3x_mix.xml  Simple_3Bus_mod3x_mix_scale2.xml  Simple_3Bus_mod3x_mix_scale3.xml  Simple_3Bus_mod3x_mix_scale_noGLAB.xml  Simple_3Bus_mod3x_power.xml  Simple_3Bus_mod_meter_current_Load.glm  Simple_3Bus_mod_meter_impedance_Load.glm  Simple_3Bus_mod_meter_mix_Load.glm  Simple_3Bus_mod_meter_power_Load.glm  Simple_3Bus_mod_single.xml
test/test_files/helics_tests/: simple_bus_test.xml  simple_bus_test1.xml  simple_bus_test1_event.xml  simple_bus_test2_event.xml  simple_bus_test_collector_vec.xml
test/test_files/input_tests/: 180busdyn_test.xml  180busstepped_test.xml  testCSV5k_array.xml  testIEEE14_randomchange.xml  testIEEE24_randomchange.xml  testIEEE30_randomchange.xml  testIEEE39_randomchange.xml  testIEEE39dynamic2.xml  testIEEE39dynamic3.xml  testIEEE39dynamic_relay.xml  testIEEE39dynamic_sine_load.xml  testIEEE9_randomchange.xml  test_mat_dyn.xml  test_psat_dyn.xml
test/test_files/load_tests/: motorload_test4_stall.xml  motorload_test5.xml
test/test_files/ns3_coupling_tests/: README  geco_fault_coupled.xml  geco_fault_uncoupled.xml
test/test_files/performance_tests/: block_grid2.xml  block_grid3.xml  block_grid4.xml
test/test_files/recorder_tests/: recorder_test.xml  recorder_test2.xml  recorder_test3.xml  recorder_test_invalid_field1.xml  recorder_test_invalid_field2.xml  recorder_test_sineA.xml  recorder_test_sineB.xml
test/test_files/relay_tests/: relay_test2.xml  relay_test3.xml  relay_test_multi.xml
test/test_files/rootFinding_tests/: test_exciter_limit1.xml  test_exciter_limit2.xml  test_gov_limit1.xml  test_gov_limit2.xml  test_gov_limit3.xml  test_rampLoadChange2.xml  test_roots1.xml
test/test_files/runnerTests/: test_180_trip.xml
test/test_files/xml_tests/: test_xmltest11.xml
test/test_files/zmq_tests/: dime_test39bus.xml
(+833 files in other folders)
